--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Current File",
-            "type": "debugpy",
+            "name": "Test unet.unet",
             "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "type": "debugpy",
+            "module": "unet.unet"
         }
     ]
 }
